# gen/proto/request/request_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.3.0
+// - protoc-gen-go-grpc v1.2.0
 // - protoc             v4.25.2
 // source: request/request.proto
 
@@ -19,15 +19,6 @@ import (
 // Requires gRPC-Go v1.32.0 or later.
 const _ = grpc.SupportPackageIsVersion7
 
-const (
-	RequestService_Create_FullMethodName       = "/request.RequestService/Create"
-	RequestService_GetById_FullMethodName      = "/request.RequestService/GetById"
-	RequestService_Get_FullMethodName          = "/request.RequestService/Get"
-	RequestService_Update_FullMethodName       = "/request.RequestService/Update"
-	RequestService_Delete_FullMethodName       = "/request.RequestService/Delete"
-	RequestService_GetAsGeoJson_FullMethodName = "/request.RequestService/GetAsGeoJson"
-)
-
 // RequestServiceClient is the client API for RequestService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
@@ -35,9 +26,10 @@ type RequestServiceClient interface {
 	Create(ctx context.Context, in *CreateRequest, opts ...grpc.CallOption) (*Request, error)
 	GetById(ctx context.Context, in *ByIdRequest, opts ...grpc.CallOption) (*Request, error)
 	Get(ctx context.Context, in *GetRequest, opts ...grpc.CallOption) (*GetResponse, error)
-	Update(ctx context.Context, in *Request, opts ...grpc.CallOption) (*Request, error)
+	Update(ctx context.Context, in *UpdateRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 	Delete(ctx context.Context, in *ByIdRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 	GetAsGeoJson(ctx context.Context, in *GetRequest, opts ...grpc.CallOption) (*GetAsGeoJsonResponse, error)
+	ExportExcel(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*ExportResponse, error)
 }
 
 type requestServiceClient struct {
@@ -50,7 +42,7 @@ func NewRequestServiceClient(cc grpc.ClientConnInterface) RequestServiceClient {
 
 func (c *requestServiceClient) Create(ctx context.Context, in *CreateRequest, opts ...grpc.CallOption) (*Request, error) {
 	out := new(Request)
-	err := c.cc.Invoke(ctx, RequestService_Create_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, "/request.RequestService/Create", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -59,7 +51,7 @@ func (c *requestServiceClient) Create(ctx context.Context, in *CreateRequest, op
 
 func (c *requestServiceClient) GetById(ctx context.Context, in *ByIdRequest, opts ...grpc.CallOption) (*Request, error) {
 	out := new(Request)
-	err := c.cc.Invoke(ctx, RequestService_GetById_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, "/request.RequestService/GetById", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -68,16 +60,16 @@ func (c *requestServiceClient) GetById(ctx context.Context, in *ByIdRequest, opt
 
 func (c *requestServiceClient) Get(ctx context.Context, in *GetRequest, opts ...grpc.CallOption) (*GetResponse, error) {
 	out := new(GetResponse)
-	err := c.cc.Invoke(ctx, RequestService_Get_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, "/request.RequestService/Get", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *requestServiceClient) Update(ctx context.Context, in *Request, opts ...grpc.CallOption) (*Request, error) {
-	out := new(Request)
-	err := c.cc.Invoke(ctx, RequestService_Update_FullMethodName, in, out, opts...)
+func (c *requestServiceClient) Update(ctx context.Context, in *UpdateRequest, opts ...grpc.CallOption) (*empty.Empty, error) {
+	out := new(empty.Empty)
+	err := c.cc.Invoke(ctx, "/request.RequestService/Update", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -86,7 +78,7 @@ func (c *requestServiceClient) Update(ctx context.Context, in *Request, opts ...
 
 func (c *requestServiceClient) Delete(ctx context.Context, in *ByIdRequest, opts ...grpc.CallOption) (*empty.Empty, error) {
 	out := new(empty.Empty)
-	err := c.cc.Invoke(ctx, RequestService_Delete_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, "/request.RequestService/Delete", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -95,7 +87,16 @@ func (c *requestServiceClient) Delete(ctx context.Context, in *ByIdRequest, opts
 
 func (c *requestServiceClient) GetAsGeoJson(ctx context.Context, in *GetRequest, opts ...grpc.CallOption) (*GetAsGeoJsonResponse, error) {
 	out := new(GetAsGeoJsonResponse)
-	err := c.cc.Invoke(ctx, RequestService_GetAsGeoJson_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, "/request.RequestService/GetAsGeoJson", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *requestServiceClient) ExportExcel(ctx context.Context, in *empty.Empty, opts ...grpc.CallOption) (*ExportResponse, error) {
+	out := new(ExportResponse)
+	err := c.cc.Invoke(ctx, "/request.RequestService/ExportExcel", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -109,9 +110,10 @@ type RequestServiceServer interface {
 	Create(context.Context, *CreateRequest) (*Request, error)
 	GetById(context.Context, *ByIdRequest) (*Request, error)
 	Get(context.Context, *GetRequest) (*GetResponse, error)
-	Update(context.Context, *Request) (*Request, error)
+	Update(context.Context, *UpdateRequest) (*empty.Empty, error)
 	Delete(context.Context, *ByIdRequest) (*empty.Empty, error)
 	GetAsGeoJson(context.Context, *GetRequest) (*GetAsGeoJsonResponse, error)
+	ExportExcel(context.Context, *empty.Empty) (*ExportResponse, error)
 	mustEmbedUnimplementedRequestServiceServer()
 }
 
@@ -128,7 +130,7 @@ func (UnimplementedRequestServiceServer) GetById(context.Context, *ByIdRequest) 
 func (UnimplementedRequestServiceServer) Get(context.Context, *GetRequest) (*GetResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Get not implemented")
 }
-func (UnimplementedRequestServiceServer) Update(context.Context, *Request) (*Request, error) {
+func (UnimplementedRequestServiceServer) Update(context.Context, *UpdateRequest) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Update not implemented")
 }
 func (UnimplementedRequestServiceServer) Delete(context.Context, *ByIdRequest) (*empty.Empty, error) {
@@ -136,6 +138,9 @@ func (UnimplementedRequestServiceServer) Delete(context.Context, *ByIdRequest) (
 }
 func (UnimplementedRequestServiceServer) GetAsGeoJson(context.Context, *GetRequest) (*GetAsGeoJsonResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetAsGeoJson not implemented")
+}
+func (UnimplementedRequestServiceServer) ExportExcel(context.Context, *empty.Empty) (*ExportResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ExportExcel not implemented")
 }
 func (UnimplementedRequestServiceServer) mustEmbedUnimplementedRequestServiceServer() {}
 
@@ -160,7 +165,7 @@ func _RequestService_Create_Handler(srv interface{}, ctx context.Context, dec fu
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RequestService_Create_FullMethodName,
+		FullMethod: "/request.RequestService/Create",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RequestServiceServer).Create(ctx, req.(*CreateRequest))
@@ -178,7 +183,7 @@ func _RequestService_GetById_Handler(srv interface{}, ctx context.Context, dec f
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RequestService_GetById_FullMethodName,
+		FullMethod: "/request.RequestService/GetById",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RequestServiceServer).GetById(ctx, req.(*ByIdRequest))
@@ -196,7 +201,7 @@ func _RequestService_Get_Handler(srv interface{}, ctx context.Context, dec func(
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RequestService_Get_FullMethodName,
+		FullMethod: "/request.RequestService/Get",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RequestServiceServer).Get(ctx, req.(*GetRequest))
@@ -205,7 +210,7 @@ func _RequestService_Get_Handler(srv interface{}, ctx context.Context, dec func(
 }
 
 func _RequestService_Update_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(Request)
+	in := new(UpdateRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
@@ -214,10 +219,10 @@ func _RequestService_Update_Handler(srv interface{}, ctx context.Context, dec fu
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RequestService_Update_FullMethodName,
+		FullMethod: "/request.RequestService/Update",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(RequestServiceServer).Update(ctx, req.(*Request))
+		return srv.(RequestServiceServer).Update(ctx, req.(*UpdateRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -232,7 +237,7 @@ func _RequestService_Delete_Handler(srv interface{}, ctx context.Context, dec fu
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RequestService_Delete_FullMethodName,
+		FullMethod: "/request.RequestService/Delete",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RequestServiceServer).Delete(ctx, req.(*ByIdRequest))
@@ -250,10 +255,28 @@ func _RequestService_GetAsGeoJson_Handler(srv interface{}, ctx context.Context, 
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: RequestService_GetAsGeoJson_FullMethodName,
+		FullMethod: "/request.RequestService/GetAsGeoJson",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(RequestServiceServer).GetAsGeoJson(ctx, req.(*GetRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RequestService_ExportExcel_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(empty.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RequestServiceServer).ExportExcel(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/request.RequestService/ExportExcel",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RequestServiceServer).ExportExcel(ctx, req.(*empty.Empty))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -288,6 +311,10 @@ var RequestService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetAsGeoJson",
 			Handler:    _RequestService_GetAsGeoJson_Handler,
+		},
+		{
+			MethodName: "ExportExcel",
+			Handler:    _RequestService_ExportExcel_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
