# internal/api/request/service.go
@@ -2,12 +2,14 @@ package request
 
 import (
 	"context"
+	"github.com/esklo/residents-tracking-platform-backend/gen/proto/empty"
 	proto "github.com/esklo/residents-tracking-platform-backend/gen/proto/request"
 	"github.com/esklo/residents-tracking-platform-backend/internal/model"
 	"github.com/esklo/residents-tracking-platform-backend/internal/service"
 	"github.com/google/uuid"
 	"github.com/pkg/errors"
 	"go.uber.org/zap"
+	"time"
 )
 
 type Implementation struct {
@@ -64,6 +66,12 @@ func (i Implementation) Create(ctx context.Context, req *proto.CreateRequest) (*
 		fileIds = append(fileIds, &fileId)
 	}
 
+	var deadline *time.Time
+	if req.Deadline != nil {
+		d := req.Deadline.AsTime()
+		deadline = &d
+	}
+
 	request, err := i.requestService.Create(ctx, &themeId, req.Description, req.Address, &model.Contact{
 		Phone: req.Contact.Phone,
 		Email: req.Contact.Email,
@@ -71,7 +79,7 @@ func (i Implementation) Create(ctx context.Context, req *proto.CreateRequest) (*
 	}, model.GeoPoint{
 		Lat: float64(req.Geo.Latitude),
 		Lon: float64(req.Geo.Longitude),
-	}, fileIds)
+	}, fileIds, deadline)
 	if err != nil {
 		return nil, err
 	}
@@ -95,8 +103,100 @@ func (i Implementation) Get(ctx context.Context, req *proto.GetRequest) (*proto.
 	return &proto.GetResponse{Requests: protoRequests}, nil
 }
 
-func (i Implementation) Update(ctx context.Context, req *proto.Request) (*proto.Request, error) {
+func (i Implementation) Update(ctx context.Context, req *proto.UpdateRequest) (*empty.Empty, error) {
 	i.logger.Debug("request.Update request")
+
+	requestId, err := uuid.Parse(req.Request.Id)
+	if err != nil {
+		return nil, errors.Wrap(err, "can not parse request id")
+	}
+
+	themeId, err := uuid.Parse(req.Request.ThemeId)
+	if err != nil {
+		return nil, errors.Wrap(err, "can not parse theme id")
+	}
+
+	var userId *uuid.UUID
+	if req.Request.UserId != "" {
+		userIdP, err := uuid.Parse(req.Request.UserId)
+		if err != nil {
+			return nil, errors.Wrap(err, "can not parse user id")
+		}
+		userId = &userIdP
+	}
+
+	var contactId uuid.UUID
+	if req.Request.Contact.Id != "" {
+		contactId, err = uuid.Parse(req.Request.Contact.Id)
+		if err != nil {
+			return nil, errors.Wrap(err, "can not parse contact id")
+		}
+	}
+
+	var fileIds []*uuid.UUID
+	for _, file := range req.Files {
+		fileId, err := uuid.Parse(file)
+		if err != nil {
+			return nil, errors.Wrap(err, "can not parse file id")
+		}
+		fileIds = append(fileIds, &fileId)
+	}
+
+	var requestStatus = model.RequestStatusUnknown
+	switch req.Request.Status {
+	case 1:
+		requestStatus = model.RequestStatusOpen
+		break
+	case 2:
+		requestStatus = model.RequestStatusClosed
+		break
+	case 3:
+		requestStatus = model.RequestStatusDeclined
+		break
+	}
+
+	var requestPriority = model.RequestPriorityUnknown
+	switch req.Request.Priority {
+	case 1:
+		requestPriority = model.RequestPriorityDefault
+		break
+	case 2:
+		requestPriority = model.RequestPriorityLow
+		break
+	case 3:
+		requestPriority = model.RequestPriorityHigh
+		break
+	}
+
+	var deadline *time.Time
+	if req.Request.Deadline != nil {
+		d := req.Request.Deadline.AsTime()
+		deadline = &d
+	}
+
+	err = i.requestService.Update(ctx, &model.Request{
+		Id:          requestId,
+		Description: req.Request.Description,
+		Geo: model.GeoPoint{
+			Lat: float64(req.Request.Geo.Latitude),
+			Lon: float64(req.Request.Geo.Longitude),
+		},
+		Address:  req.Request.Address,
+		Status:   requestStatus,
+		Priority: requestPriority,
+		ThemeId:  &themeId,
+		Contact: &model.Contact{
+			Id:    contactId,
+			Phone: req.Request.Contact.Phone,
+			Email: req.Request.Contact.Email,
+			Name:  req.Request.Contact.Name,
+		},
+		UserId:   userId,
+		Deadline: deadline,
+	}, fileIds)
+	if err != nil {
+		return nil, err
+	}
 	return nil, nil
 }
 
@@ -104,4 +204,17 @@ func (i Implementation) GetAsGeoJson(ctx context.Context, req *proto.GetRequest)
 	i.logger.Debug("request.GetAsGeoJson request")
 	bytes, err := i.requestService.GetAllAsGeoJson(ctx)
 	return &proto.GetAsGeoJsonResponse{Geojson: bytes}, err
+}
+
+func (i Implementation) ExportExcel(ctx context.Context, req *empty.Empty) (*proto.ExportResponse, error) {
+	i.logger.Debug("request.ExportExcel request")
+	file, err := i.requestService.ExportExcel(ctx)
+	if err != nil {
+		return nil, errors.Wrap(err, "can not export excel")
+	}
+	protoFile, err := file.ToProto()
+	if err != nil {
+		return nil, errors.Wrap(err, "can not convert file to proto")
+	}
+	return &proto.ExportResponse{File: protoFile}, nil
 }
